; ModuleID = '/home/carl/AnghaBench/mongoose/extr_mongoose.c_mg_send_websocket_handshake2.c'
source_filename = "/home/carl/AnghaBench/mongoose/extr_mongoose.c_mg_send_websocket_handshake2.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mg_connection = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mg_send_websocket_handshake2(%struct.mg_connection* %0, i8* %1, i8* %2, i8* %3, i8* %4) #0 {
  %6 = alloca %struct.mg_connection*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  store %struct.mg_connection* %0, %struct.mg_connection** %6, align 8
  store i8* %1, i8** %7, align 8
  store i8* %2, i8** %8, align 8
  store i8* %3, i8** %9, align 8
  store i8* %4, i8** %10, align 8
  %11 = load %struct.mg_connection*, %struct.mg_connection** %6, align 8
  %12 = load i8*, i8** %7, align 8
  %13 = load i8*, i8** %8, align 8
  %14 = load i8*, i8** %9, align 8
  %15 = load i8*, i8** %10, align 8
  %16 = call i32 @mg_send_websocket_handshake3(%struct.mg_connection* %11, i8* %12, i8* %13, i8* %14, i8* %15, i32* null, i32* null)
  ret void
}

declare dso_local i32 @mg_send_websocket_handshake3(%struct.mg_connection*, i8*, i8*, i8*, i8*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
